--- a/styles.css
+++ b/styles.css
@@ -84,8 +84,8 @@
   border: none;
   border-radius: 0.2rem;
   cursor: pointer;
-  -webkit-transition: .2s;
-  transition: .2s;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .gerador-container main .wrapper button:hover,
@@ -189,5 +189,44 @@
   color: #fff;
   font-size: 1rem;
   height: 3rem;
+}
+
+@media (max-width: 767px) {
+  .results main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1rem;
+  }
+  .results main .wrapper {
+    width: 100%;
+  }
+  .gerador-container main.form {
+    width: 100%;
+    gap: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: space-between;
+            flex-direction: space-between;
+  }
+  .gerador-container main.form input,
+  .gerador-container main.form select {
+    width: calc(50% - 0.5rem);
+  }
+}
+
+@media (max-width: 425px) {
+  .gerador-container main.form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1rem;
+  }
+  .gerador-container main.form input,
+  .gerador-container main.form select {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
