--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,18 @@
           flex-direction: column;
 }
 
+.gerador-container h1,
+.results h1 {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-weight: normal;
+}
+
+.gerador-container h1 span,
+.results h1 span {
+  font-weight: bold;
+}
+
 .gerador-container header,
 .gerador-container main,
 .gerador-container footer,
